--- a/k8s/whitebook.yaml
+++ b/k8s/whitebook.yaml
@@ -19,7 +19,7 @@ spec:
           name: whitebook
           env:
             - name: STORY_API_URL
-              value: http://yoneebook:5000
+              value: yoneebook
 ---
 apiVersion: v1
 kind: Service
