--- a/k8s/whitebook.yaml
+++ b/k8s/whitebook.yaml
@@ -18,8 +18,8 @@ spec:
         - image: tsongpon/whitebook
           name: whitebook
           env:
-            - name: STORY_API_URL
-              value: http://yoneebook
+            - name: process.env.REACT_APP_API_URL
+              value: http://yoneebook/v1/stories
 ---
 apiVersion: v1
 kind: Service
