--- a/k8s/whitebook.yaml
+++ b/k8s/whitebook.yaml
@@ -18,8 +18,8 @@ spec:
         - image: tsongpon/whitebook:latest
           name: whitebook
           env:
-            - name: process.env.REACT_APP_API_URL
-              value: http://yoneebook/v1/stories
+            - name: REACT_APP_API_URL
+              value: http://35.240.197.95/v1/stories
 ---
 apiVersion: v1
 kind: Service
